--- a/components/cardUser/styles.css
+++ b/components/cardUser/styles.css
@@ -89,8 +89,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  margin: 5px 0;
-  padding: 5px;
+  padding: 7px 5px;
   border-bottom: 1px solid #e10600;
 }
 
