--- a/components/profile/styles.css
+++ b/components/profile/styles.css
@@ -86,6 +86,31 @@
   width: 220px;
 }
 
+.table-matchs-body {
+  max-height: 400px;
+  overflow-y: auto;
+  padding-right: 5px;
+}
+
+.table-matchs-body::-webkit-scrollbar,
+.scroll-x::-webkit-scrollbar {
+  width: 7px;
+  height: 7px;
+}
+
+.table-matchs-body::-webkit-scrollbar-track,
+.scroll-x::-webkit-scrollbar-track {
+  border-radius: 50px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+ 
+.table-matchs-body::-webkit-scrollbar-thumb,
+.scroll-x::-webkit-scrollbar-thumb {
+  background-color: #a8a8a8;
+  border: 1px solid #15151e;
+  border-radius: 50px;
+}
+
 .alert {
   background-color: #626263;
   color: #fff;
